--- a/css/styles.css
+++ b/css/styles.css
@@ -84,12 +84,13 @@ body{
     letter-spacing: 0.02em;
     list-style: none;
     padding-bottom: 32px;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav:hover,
 .nav:focus {
     color: var(--color-button-nav);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav.link.current{
     color: var(--color-button-nav);
@@ -116,14 +117,15 @@ body{
     gap: 10px;
     align-items: center;
     fill: var(--color-text-paragraph);
+    transition-property: color, fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .heder-text:hover,
 .heder-text:focus{
     color: var(--color-button-nav);
     fill: var(--color-button-nav);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .heder-conteiner{
@@ -320,13 +322,14 @@ body{
     height: 100%;
     border-radius: 50%;
     fill: var(--color-icon);
+    transition-property: background-color, fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .socials-link:hover,
 .socials-link:focus{
     background-color: var(--color-button-nav);
     fill: var(--color-white);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*Постійні клієнти*/
 .customers{
@@ -344,14 +347,15 @@ body{
     align-items: center;
     justify-content: center;
     fill: var(--color-icon);
+    transition-property:border, fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-list:hover,
 .customers-list:focus{
     border: 1px solid var(--color-button-nav);
     border-radius: 4px;
     fill: var(--color-button-nav);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*Портфоліо*/
 
@@ -375,6 +379,9 @@ body{
     letter-spacing: 0.03em;
     padding: 6px 22px;
     border-radius: 4px;
+    transition-property: background-color, color, box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-portfolio:hover,
@@ -382,8 +389,6 @@ body{
     background-color: var(--color-button-nav);
     color:var(--color-white);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio{
@@ -399,6 +404,9 @@ body{
     border: 1px solid;
     border-color: var(--color-border); 
     background-color: var(--color-white);
+    transition-property: border, box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .box{
     padding: 19px 23px;
@@ -431,8 +439,6 @@ body{
 .box-oll:focus{
     border: 1px solid #EEEEEE;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-title{
@@ -479,6 +485,9 @@ body{
     line-height: 1.71px;
     letter-spacing: 0.03em;
     font-style: normal;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .communication{
@@ -487,8 +496,6 @@ body{
 .address:hover,
 .address:focus{
     color: var(--color-button-nav);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-address{
@@ -526,13 +533,14 @@ margin-top: 12px;
     height: 100%;
     border-radius: 50%;
     fill: var(--color-white);
+    transition-property: background-color, fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-socials-link:hover,
 .footer-socials-link:focus{
     background-color: var(--color-button-nav);
     fill: var(--color-white);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Модальне вікно */
