--- a/css/styles.css
+++ b/css/styles.css
@@ -558,6 +558,11 @@ margin-top: 12px;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    transition-property: opacity visibility;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
+    
 }
 .modal{
     position: absolute;
